package entity;

import javafx.scene.canvas.GraphicsContext;

public interface PropFunctionable {

    void draw(GraphicsContext gc);

    void update();
}
